Closed Bug 123755 Opened 23 years ago Closed 22 years ago

bad behavior with opacity, sidebars, and window resizing

Categories

(SeaMonkey :: Sidebar, defect)

x86
Linux
defect
Not set
critical

Tracking

(Not tracked)

RESOLVED FIXED
Future

People

(Reporter: notting, Assigned: roc)

References

()

Details

(Keywords: crash)

Attachments

(2 files)

From Bugzilla Helper: User-Agent: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:0.9.8) Gecko/20020205 BuildID: 2002020511 I'm seeing weird behavior with the combination of: 1) opacity (set via a style sheet) 2) sidebars that contain HTML (not XUL) content 3) resizing of the mozilla window Using Linux, 0.9.8. Mozilla either crashes, or overwrites the sidebar display. Reproducible: Always Steps to Reproduce: 1. Have a chrome/userContent.css that contains: BODY { -moz-opacity: .50 !important; } 2. Have a default sidebar panel that contains HTML (for example, point it at http://bugzilla.mozilla.org/) 3. Open a default-sized window, and go to a web site (for example, http://www.redhat.com/) 4. Hit the 'maximize' button in your window manager of choice Actual Results: It varies depending on the sidebar content, AFAICT. Sometimes the contents of the sidebar are overwritten with stuff from the web page. I've also seen mozilla crash. If the sidebar is overwritten, refreshing it works. Expected Results: Not crashed, and not overwritten the sidebar display. I'll try and get a backtrace of the crash, once I get a debugging build going.
CC:ing blizzard, since the crash is in the GTK code, in case he has any ideas what's going on. ;)
This is one of the cases where it crashes. The sidebar content in this case is a random HTML file I wrote (basically, bookmarks + some form stuff)
Not my usual area, adding the image posse.
Looks like nsBlender - adding roc.
Over to pavlov for a look.
Assignee: sgehani → pavlov
Keywords: crash
I bet it's me :-). BTW adding > BODY { > -moz-opacity: .50 !important; > } to your userContent.css is crazy :-)
Attached patch Partial fixSplinter Review
The problem seems to be that we're running out of resources and various things are failing silently. I haven't been able to pin down exactly which things. Running out of resources is not surprising; when I maximise my window with these opacity settings, the view manager tries to allocate 3 2048x1024 pixel offscreen drawing surfaces. This patch prevents the crash, at least. nsDrawingSurfaceGTK::Lock must check to see if it got the image; if not, then we just return failure. The view manager detects this and paints opaquely instead. The "Blend failed!" warning IS triggered sometimes. The patch also cleans up some error handling in nsViewManager::CreateBlendingBuffers(). However, I still sometimes see the sidebar (or the content area) not being painted properly sometimes. I presume some GTK calls are failing silently, but I'm not sure which ones.
blizzard, pavlov, can you sr/r this respectively?
Status: UNCONFIRMED → NEW
Ever confirmed: true
Comment on attachment 69003 [details] [diff] [review] Partial fix r=pavlov
-> roc
Assignee: pavlov → roc+moz
Comment on attachment 69003 [details] [diff] [review] Partial fix sr=attinasi
Attachment #69003 - Flags: superreview+
Checked in. I'm leaving this bug open because things still aren't rendered properly in some cases and I don't know where the failing GTK call is.
Status: NEW → ASSIGNED
Severity: normal → minor
Target Milestone: --- → Future
By the definitions on <http://bugzilla.mozilla.org/bug_status.html#severity> and <http://bugzilla.mozilla.org/enter_bug.cgi?format=guided>, crashing and dataloss bugs are of critical or possibly higher severity. Only changing open bugs to minimize unnecessary spam. Keywords to trigger this would be crash, topcrash, topcrash+, zt4newcrash, dataloss.
Severity: minor → critical
Marking FIXED because the original bug was fixed and all the relevant code has changed a lot since this bug was reported. If there are any remaining issues someone else will report them :-).
Status: ASSIGNED → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Product: Browser → Seamonkey
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: