Bug 123755. Fix Gtk crasher when drawing surface cannot be locked. r=pavlov,sr=attinasi